#                                                                                          #
#                                      Changelog                                           #
#                                                                                          #
############################################################################################

[98] --> Fix Sunwell Plateau. (Test!)
[97] --> Fixed a crash with npc_boneguard_mounted script. (Thx fiveofeight)
[96] --> Fix Isle of Conquest - Teleports.
[95] --> Fix Halion.
[94] --> Fix Normal and Glyph of Eternal Water - Water Elemental.
[93] --> Fix Quests Argent Tournament.
[92] --> Add [MOD] MultiKill.
[91] --> Fix lowlevel pets cause big damage.
[90] --> Fix Warlock: Spell Lock.
[89] --> Fix crash (Test!).
[88] --> Fix Hunter pet scale.
[87] --> Fix Magic Absorption.
[86] --> Fix crash Trial Of The Crusader.
[85] --> Remove unit lost control before teleport.
[84] --> Fix loot GunShip.
[83] --> Add Name Developer Announce.
[82] --> Add Name Admin, GameMaster and Guard Announces.
[81] --> Fix Sindragosa (Final version!).
[80] --> Update CCDelay by Diton.
[79] --> Core/Resistances:
          - Remove Holy Resistance from Players
          - Do not add Holy Resist from Items to Players
          - Resistance Handling from Holy resist removed
          Signed-off-by: Pointerxx <marvin.wichmann@web.de>
[78] --> Fix Sindragosa (Test!).
[77] --> Fix autocast petspells.
[76] --> Misc fixs: (Test!)
         - Fix Totems LOS.
         - Fix combatstop spells Invisible, Shadow. Trigger, Shadowmeld.
         - Fix Rogue: Vanish.
         - Fix Mage: Water Elemental.
         - Fix problem pets. (If you are dismounted, your pet had 1hp.)
[75] --> Fix Shaman: Earthbind Totem.
[74] --> Fix Paladin: Righteous Defense.
[73] --> Update CCDelay.
[72] --> Fix Grounding Totem.
[71] --> Fix Priest: Shadowform.
[70] --> Fixed [Item] Wrathful Gladiator's Dreadplate Gauntlets.
[69] --> Add Npc Top 10 Arena Teams.