@@ -191,3 +191,11 @@ INSERT INTO `creature_template` (`entry`, `difficulty_entry_1`, `difficulty_entr
 -- Fix Isle of Conquest - Teleports
 UPDATE `spell_linked_spell` SET `spell_effect` = 66551 WHERE `spell_trigger` IN (66549, 66548);
 UPDATE `spell_linked_spell` SET `spell_trigger` = 66551 WHERE `spell_effect` IN (-66548, -66549);
+
+-- Fix [Warrior] T10 4P Bonus
+-- Slam
+DELETE FROM spell_script_names WHERE spell_id = 46916;
+INSERT INTO spell_script_names VALUES (46916,'spell_warr_slam');
+-- Execute
+DELETE FROM spell_script_names WHERE spell_id = 52437;
+INSERT INTO spell_script_names VALUES (52437,'spell_warr_execute_bonus');
